added restframework and simplejwt to pipenv

--- a/backend/TPO/Pipfile
+++ b/backend/TPO/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
 drf-yasg = "*"
-djangorestframework = "*"
 django-cors-headers = "*"
+django = "*"
+djangorestframework = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
