--- a/backend/TPO/Pipfile
+++ b/backend/TPO/Pipfile
@@ -9,6 +9,7 @@ django-cors-headers = "*"
 django = "*"
 djangorestframework = "*"
 djangorestframework-simplejwt = "*"
+pillow = "*"
 
 [dev-packages]
 
